--- a/FrontEnd/1/index.html
+++ b/FrontEnd/1/index.html
@@ -36,7 +36,7 @@
     </section>
     <section id="main">
         <div class="main_text">
-            <h2>Сюжет</h2>
+            <h1 id="about_header">Сюжет</h1>
             <p id="about">Скотт Пилигрим — 22-летний бас-гитарист рок-группы Sex Bob-Omb из Торонто. Он встречается со школьницей Найвз Чау, однако его друзьям из группы Стивену Стиллзу и Ким Пайн, соседу по комнате Уоллесу Уэллсу и младшей сестре Стейси Пилигрим она не очень нравится. Скотт знакомится с девушкой-курьером Amazon, Рамоной Флауэрс, впервые увидев её во сне. Он теряет интерес к Найвз, но не торопится разрывать с ней отношения. Когда Sex Bob-Omb выступает в битве групп, на Скотта нападает Мэттью Пател, бывший парень Рамоны. Скотт побеждает его и узнаёт, что для того чтобы встречаться с Рамоной, нужно победить её семерых злых бывших.
 
                 Пилигрим окончательно расстаётся с Найвз, та винит в этом Рамону и обещает вернуть Скотта обратно. Тем временем Скотт побеждает следующих трёх бывших: актёра и скейтбордиста Лукаса Ли, вегана Тодда Инграма и лесбиянку Рокси Рихтер. При этом Пилигрим сталкивается со своей бывшей, поп-звездой Энви Адамс. После рассказов Рамоны о свиданиях Скотт расстаётся с ней. На следующей битве групп Sex Bob-Omb побеждает пятого и шестого бывших Рамоны, Кайла и Кена Катаянаги, а Скотт получает дополнительную жизнь. Рамона возвращается к своему седьмому бывшему, Гидеону Грейвсу. Sex Bob-Omb заключает контракт с лейблом Гидеона, кроме Скотта, покинувшего свою группу в знак протеста.
