--- a/FrontEnd/js task/index.html
+++ b/FrontEnd/js task/index.html
@@ -89,7 +89,7 @@
             <br>
             <div>
                 <button class="btn">Нажми!</button>
-                <img src="" class="gif"/>
+                <img src="null" class="gif" alt="img"/>
                 <script class="js">   
                     const gif = document.querySelector('.gif');
                     const scottURL = 'https://media.tenor.com/AlcidfrxIQsAAAAC/scott-pilgrim-michael-cera.gif';
