--- a/FrontEnd/js task/index.html
+++ b/FrontEnd/js task/index.html
@@ -5,8 +5,7 @@
     <title>Scott Pilgrim</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    
+<body>  
     <img src="src/img/back2.png" id="mobile_back" alt="back2">
     <section id="intro" >
         <div class="mainPoster">
@@ -44,7 +43,7 @@
                 Решив отвоевать сердце Рамоны, Скотт вступает в битву с Гидеоном, используя меч «Сила любви». Найвз встревает в битву и сражается с Рамоной, а Скотт признаётся, что изменял им обеим. Гидеон побеждает Скотта. Пилигрим использует дополнительную жизнь, заключает мир со своими друзьями и вновь вступает в схватку с Гидеоном, используя «Силу самоуважения». Осознав свои ошибки, Скотт объединяется с Найвз и побеждает Гидеона. Рамона готовится уйти. Найвз признаётся Скотту, что их отношения закончились, и просит догнать Рамону. Пилигрим следует её совету и просит Флауэрс дать ему шанс начать всё сначала.</p>
         </div>
         <div class="opinion">
-            <form>
+            <form id="form">
                 <h2>Что вы думаете о фильме?</h2>
                 <table class="survey">
                     <tr>
