--- a/FrontEnd/react task/index.html
+++ b/FrontEnd/react task/index.html
@@ -114,7 +114,7 @@
             function GetOption(props) 
             {
                 const list = props.sex.map((type, index) => 
-                    <option>{type.type}</option>
+                    <option key={type.id}>{type.type}</option>
                 );
                 return list;
             }
@@ -123,7 +123,7 @@
             {
                 return props.stars.map((type, index) =>  
                     <lable for={type.id}>
-                        <input type='radio' name='stars' value={type.id}/>
+                        <input key={type.id} type='radio' name='stars' value={type.id}/>
                         {type.type}
                         <br/> 
                     </lable>   
@@ -197,7 +197,7 @@
                                     <div value={this.state.stars} required onChange={this.handleChange}>
                                         <GetRadio stars={stars}/>
                                     </div>
-
+                                    
                                     <strong>Как вам фильм?</strong>   
                                     <br/>  
                                     <textarea className='comment' name="comment" value={this.state.comment} required onChange={this.handleChange}></textarea>
