--- a/FrontEnd/react task/index.html
+++ b/FrontEnd/react task/index.html
@@ -119,7 +119,7 @@
                 return list;
             }
             
-            function GetRadio(props, name) 
+            function GetRadio(props) 
             {
                 return props.stars.map((type, index) =>  
                     <lable key={type.id} for={type.id}>
